// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`news displays 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li class=\\"false\\">
                <a href=\\"/\\">Home</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/about\\">About</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/account\\">Dashboard</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/login\\">Log in</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/register\\">Register</a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>News</h1>
      <p>See what happened recently in the community.</p>
      <div></div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>
          Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>
          . Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>
          .
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`news displays changes to user data 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li class=\\"false\\">
                <a href=\\"/\\">Home</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/about\\">About</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/account\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\">
                  Hello,
                  test
                  
                  <!-- /react-text --><span class=\\"caret\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>News</h1>
      <p>See what happened recently in the community.</p>
      <div>
        <div>
          <div style=\\"margin-bottom:1.5rem;display:flex;\\">
            <div>
              <a href=\\"/u/test\\">
                <img alt=\\"Gravatar for undefined\\" style=\\"margin-right:1.5rem;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=75\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=150 2x\\"
                  height=\\"75\\" width=\\"75\\" class=\\"react-gravatar\\">
              </a>
            </div>
            <div>
              <h4 style=\\"margin-top:0;\\">
                <a href=\\"/u/test\\">Test User</a>
              </h4>
              <ul style=\\"padding-left:0;list-style-position:inside;\\">
                <li>
                  &#x1F464; Updated
                  <a href=\\"/u/test/profile\\">profile</a><span>:<!-- /react-text --><span><!-- /react-text -->Name<!-- /react-text --></span><span>, <!-- /react-text -->About<!-- /react-text --></span>
                  <span
                   >
                    ,
                    Bio
                    </span><span>, <!-- /react-text -->Website<!-- /react-text --></span><span>, <!-- /react-text -->Blog<!-- /react-text --></span>
                    <span
                     >
                      and
                      22
                      more
                      </span>
                      </span>
                      .
                </li>
                <li>
                  &#x2714; Completed
                  Past authoring
                </li>
                <li>
                  &#x2714; Completed
                  Present faults authoring
                </li>
                <li>
                  &#x2714; Completed
                  Present virtues authoring
                </li>
                <li>
                  &#x2714; Completed
                  Future authoring
                </li>
                <li>
                  &#x2714; Completed
                  Understand myself
                </li>
                <li>
                  &#x25CE; Updated
                  <a href=\\"/u/test/goals\\">goals description</a>
                  .
                </li>
                <li>
                  &#x25CE; Wants to achieve
                  <!-- /react-text --><span> <!-- /react-text --><em>Goal</em></span><span>, <!-- /react-text --><em>Goal - doing</em></span><span>, <!-- /react-text --><em>Goal - done</em></span></li>
                <li
                 >
                  &#x1F4D6; Updated
                  <a href=\\"/u/test/reads\\">reading list description</a>
                  .
                  </li>
                  <li>
                    &#x1F4D6; Added books to
                    <a href=\\"/u/test/reads\\">reading list</a>
                    :
                    <!-- /react-text --><span> <!-- /react-text --><em>Read</em></span><span>, <!-- /react-text --><em>Read - read</em></span>
                    <span
                     >
                      ,
                      <!-- /react-text --><em>Read - reading</em></span>
                  </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>
          Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>
          . Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>
          .
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`news displays journal events 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li class=\\"false\\">
                <a href=\\"/\\">Home</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/about\\">About</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/account\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\">
                  Hello,
                  test
                  
                  <!-- /react-text --><span class=\\"caret\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>News</h1>
      <p>See what happened recently in the community.</p>
      <div>
        <div>
          <div style=\\"margin-bottom:1.5rem;display:flex;\\">
            <div>
              <a href=\\"/u/test\\">
                <img alt=\\"Gravatar for undefined\\" style=\\"margin-right:1.5rem;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=75\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=150 2x\\"
                  height=\\"75\\" width=\\"75\\" class=\\"react-gravatar\\">
              </a>
            </div>
            <div>
              <h4 style=\\"margin-top:0;\\">
                <a href=\\"/u/test\\">test</a>
              </h4>
              <ul style=\\"padding-left:0;list-style-position:inside;\\">
                <li>
                  &#x270E; Added to journal:
                  <!-- /react-text --><span> <!-- /react-text --><a href=\\"http://www.example.com\\" target=\\"_blank\\">Hello World</a></span></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>
          Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>
          . Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>
          .
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`news displays read events 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li class=\\"false\\">
                <a href=\\"/\\">Home</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/about\\">About</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/account\\">Dashboard</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/login\\">Log in</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/register\\">Register</a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>News</h1>
      <p>See what happened recently in the community.</p>
      <div>
        <div>
          <div style=\\"margin-bottom:1.5rem;display:flex;\\">
            <div>
              <a href=\\"/u/test\\">
                <img alt=\\"Gravatar for undefined\\" style=\\"margin-right:1.5rem;\\" src=\\"//www.gravatar.com/avatar/test?d=retro&amp;r=g&amp;s=75\\" srcset=\\"//www.gravatar.com/avatar/test?d=retro&amp;r=g&amp;s=150 2x\\" height=\\"75\\" width=\\"75\\" class=\\"react-gravatar\\"
                 >
              </a>
            </div>
            <div>
              <h4 style=\\"margin-top:0;\\">
                <a href=\\"/u/test\\">test</a>
              </h4>
              <ul style=\\"padding-left:0;list-style-position:inside;\\">
                <li>
                  &#x2714; Achieved
                  <!-- /react-text --><span> <!-- /react-text --><em>TestGoal</em></span></li>
                <li>
                  &#x1F4D6; Read
                  <!-- /react-text --><span> <!-- /react-text --><em>Test</em></span></li>
                <li>
                  &#x26CF; Is working on
                  <!-- /react-text --><span> <!-- /react-text --><em>TestGoal</em></span></li>
                <li>
                  &#x1F441; Started reading
                  <!-- /react-text --><span> <!-- /react-text --><em>Test</em></span></li>
                <li>
                  &#x25CE; Wants to achieve
                  <!-- /react-text --><span> <!-- /react-text --><em>TestGoal</em></span></li>
                <li>
                  &#x1F4D6; Added books to
                  <a href=\\"/u/test/reads\\">reading list</a>
                  :
                  <!-- /react-text --><span> <!-- /react-text --><em>Test</em></span></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>
          Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>
          . Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>
          .
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`news limits results 1`] = `
"<div data-reactroot=\\"\\">
  <div>
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\">
        <div class=\\"container\\">
          <div class=\\"navbar-header\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\"><span class=\\"sr-only\\">Toggle navigation</span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span><span class=\\"icon-bar\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\">
            <ul class=\\"nav navbar-nav navbar-right\\">
              <li class=\\"false\\">
                <a href=\\"/\\">Home</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/about\\">About</a>
              </li>
              <li class=\\"active\\">
                <a href=\\"/news\\">News</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/users\\">Sorters</a>
              </li>
              <li class=\\"false\\">
                <a href=\\"/account\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\">
                  Hello,
                  test
                  
                  <!-- /react-text --><span class=\\"caret\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\">
      <h1>News</h1>
      <p>See what happened recently in the community.</p>
      <div>
        <div>
          <div style=\\"margin-bottom:1.5rem;display:flex;\\">
            <div>
              <a href=\\"/u/test\\">
                <img alt=\\"Gravatar for undefined\\" style=\\"margin-right:1.5rem;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=75\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=150 2x\\"
                  height=\\"75\\" width=\\"75\\" class=\\"react-gravatar\\">
              </a>
            </div>
            <div>
              <h4 style=\\"margin-top:0;\\">
                <a href=\\"/u/test\\">test</a>
              </h4>
              <ul style=\\"padding-left:0;list-style-position:inside;\\">
                <li>
                  &#x270E; Added to journal:
                  <!-- /react-text --><span> <!-- /react-text --><a href=\\"http://www.example.com\\" target=\\"_blank\\">Hello World</a></span><span>, <!-- /react-text --><a href=\\"http://www.example.com\\" target=\\"_blank\\">Hello World</a></span>
                  <span
                   >
                    ,
                    <a href=\\"http://www.example.com\\" target=\\"_blank\\">Hello World</a>
                    </span><span>, <!-- /react-text --><a href=\\"http://www.example.com\\" target=\\"_blank\\">Hello World</a></span><span>, <!-- /react-text --><a href=\\"http://www.example.com\\" target=\\"_blank\\">Hello World</a></span>
                    <span
                     >
                      and
                      6
                      more
                      </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer>
      <div class=\\"container\\">
        <hr>
        <p>
          Brought to you with &#x2764; by
          <a href=\\"/about\\">Nick Redmark</a>
          . Support this platform on
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\">Patreon</a>
          .
        </p>
      </div>
    </footer>
  </div>
</div>"
`;
